# cgdiff

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  cgdiff.toml
.github/workflows/: ci.yml  release-binaries.yml  static-linux-musl.yml
demo/: example.tape
demo/example/: Makefile  a.c  b.c
specs/: spec.md  symbolic.md
src/: cli.rs  compare.rs  config.rs  diff_view.rs  disassembly.rs  filter.rs  main.rs  output.rs  pager.rs  progress.rs  tests.rs  theme.rs  tui.rs
