[package]
name = "cgdiff"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
memchr = "2.8.0"
ratatui = "0.30.0"
rayon = "1.12.0"
regex = "1.12.3"
shlex = "1.3.0"
tempfile = "3.27.0"
which = "8.0.2"
